--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 body {
     font-family:  Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* position: relative; */
 }
 
 .header {
@@ -13,7 +14,10 @@ body {
     justify-content: center;
     align-items: center;
     /* padding: 6px 50px; */
+    /* height: 100px; */
+    /* position: sticky; */
     position: sticky;
+    top: 0;
 }
 
 .header__container {
@@ -22,6 +26,8 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 6px 50px;
+    /* position: sticky;
+    top: 0; */
 }
 
 .header__logo {
@@ -105,6 +111,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 30px 80px;
     /* justify-content: center; */
     /* flex-wrap: wrap; */
 }
@@ -118,9 +125,46 @@ a {
 
 .info__cards {
     display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
+.card {
+    /* border: 1px solid red; */
+    text-align: center;
+    width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    /* flex: 0 1 200px; */
+}
 
+.card__image {
+    width: 140px;
+    height: 140px;
+    border: 4px solid #3882F6;
+    border-radius: 16px;
+}
+
+.testimonials {
+    padding: 40px;
+    background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.testimonials__quote {
+    width: 100ch;
+}
+
+.testimonials__quote p {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+}
 
 
 .footer {
