--- a/css/styles.css
+++ b/css/styles.css
@@ -21,24 +21,20 @@ body {
 }
 
 .header__container {
-    flex: 0 1 980px;
+    flex: 0 1 1000px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 6px 50px;
+    padding: 12px 50px;
     /* position: sticky;
     top: 0; */
 }
 
-.header__logo {
-    /* margin-left: auto; */
-}
 
 .header-links {
     list-style: none;
     display: flex;
-    gap: 18px;
-    /* margin-right: auto; */
+    gap: 24px;
 }
 
 a {
@@ -51,18 +47,18 @@ a {
     justify-content: center;
     align-items: center;
     background-color: #1F2937;
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 
 .hero__container {
-    flex: 0 1 980px;
+    flex: 0 1 1000px;
     /* background-color: #1F2937; */
     display: flex;
     /* justify-content: space-around; */
     justify-content: space-between;
     align-items: flex-end;
-    padding: 60px;
-    gap: 60px;
+    padding: 100px 50px 134px;
+    gap: 50px;
     flex-wrap: wrap-reverse;
 }
 
@@ -75,14 +71,15 @@ a {
 
 .hero__image {
     flex: 1 1 auto;
-    width: 400px;
+    width: 500px;
     height: auto;
 }
 
 .hero__info {
     flex: 1 1 auto;
     /* flex: 1 1 auto; */
-    width: 400px;
+    width: 450px;
+    /* width: 500px; */
     /* flex: 0 1 0; */
     /* flex-grow: 0; */
     /* width: 500px; */
@@ -98,11 +95,12 @@ a {
 .hero__sign-up-btn {
     background-color: #3882F6;
     border: none;
-    padding: 6px 24px;
+    padding: 9px 33px;
     color: #F9FAF8;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 16px;
     border-radius: 6px;
-    margin-top: 10px;
+    margin-top: 12px;
 }
 
 
@@ -111,45 +109,57 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 30px 80px;
-    /* justify-content: center; */
+    /* padding: 8px; */
+    text-align: center;
     /* flex-wrap: wrap; */
+    /* gap: 60px; */
+    padding: 10px 10px 104px;
 }
 
 .info__title {
     font-size: 36px;
+    /* margin: 44px 0; */
     color: #1F2937;
     justify-content: center;
-    gap: 60px;
+    font-weight: 800;
+    margin-bottom: 42px;
+    /* gap: 60px; */
 }
 
 .info__cards {
     display: flex;
-    gap: 30px;
+    gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
 }
 
 .card {
-    /* border: 1px solid red; */
+    /* outline: 1px solid red; */
     text-align: center;
-    width: 150px;
+    width: 180px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 8px;
+    gap: 10px;
     /* flex: 0 1 200px; */
 }
 
 .card__image {
-    width: 140px;
-    height: 140px;
+    width: 160px;
+    height: 160px;
     border: 4px solid #3882F6;
     border-radius: 16px;
 }
 
+.card__subtext {
+    color: #1F2937;
+    padding: 0 10px;
+    font-size: 18px;
+}
+
 .testimonials {
-    padding: 40px;
+    padding: 78px;
     background-color: #E5E7EB;
     display: flex;
     justify-content: center;
@@ -157,13 +167,22 @@ a {
 }
 
 .testimonials__quote {
-    width: 100ch;
+    width: 98ch;
 }
 
 .testimonials__quote p {
     font-size: 36px;
     color: #1F2937;
     font-style: italic;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+
+.testimonials__quote figcaption {
+    text-align: right;
+    font-size: 24px;
+    font-weight: bold;
+    padding-right: 60px;
 }
 
 
