--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 
 body {
     font-family:  Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* position: relative; */
 }
 
 .header {
@@ -13,9 +12,6 @@ body {
     background-color: #1F2937;
     justify-content: center;
     align-items: center;
-    /* padding: 6px 50px; */
-    /* height: 100px; */
-    /* position: sticky; */
     position: sticky;
     top: 0;
 }
@@ -26,8 +22,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 12px 50px;
-    /* position: sticky;
-    top: 0; */
 }
 
 
@@ -47,14 +41,11 @@ a {
     justify-content: center;
     align-items: center;
     background-color: #1F2937;
-    /* padding-bottom: 20px; */
 }
 
 .hero__container {
     flex: 0 1 1000px;
-    /* background-color: #1F2937; */
     display: flex;
-    /* justify-content: space-around; */
     justify-content: space-between;
     align-items: flex-end;
     padding: 100px 50px 134px;
@@ -77,25 +68,19 @@ a {
 
 .hero__info {
     flex: 1 1 auto;
-    /* flex: 1 1 auto; */
     width: 450px;
-    /* width: 500px; */
-    /* flex: 0 1 0; */
-    /* flex-grow: 0; */
-    /* width: 500px; */
 }
 
 .hero__secondary-text {
     margin: 0;
     color: #E5E7EB;
     font-size: 18px;
-    /* font-weight: extra-bold; */
 }
 
 .hero__sign-up-btn {
     background-color: #3882F6;
     border: none;
-    padding: 9px 33px;
+    padding: 8px 32px;
     color: #F9FAF8;
     font-weight: 600;
     font-size: 16px;
@@ -103,27 +88,24 @@ a {
     margin-top: 12px;
 }
 
-
+button:hover {
+    cursor: pointer;
+}
 
 .info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* padding: 8px; */
     text-align: center;
-    /* flex-wrap: wrap; */
-    /* gap: 60px; */
     padding: 10px 10px 104px;
 }
 
 .info__title {
     font-size: 36px;
-    /* margin: 44px 0; */
     color: #1F2937;
     justify-content: center;
     font-weight: 800;
     margin-bottom: 42px;
-    /* gap: 60px; */
 }
 
 .info__cards {
@@ -134,7 +116,6 @@ a {
 }
 
 .card {
-    /* outline: 1px solid red; */
     text-align: center;
     width: 180px;
     padding: 10px;
@@ -142,7 +123,6 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    /* flex: 0 1 200px; */
 }
 
 .card__image {
@@ -159,7 +139,7 @@ a {
 }
 
 .testimonials {
-    padding: 78px;
+    padding: 90px 60px;
     background-color: #E5E7EB;
     display: flex;
     justify-content: center;
@@ -168,6 +148,7 @@ a {
 
 .testimonials__quote {
     width: 98ch;
+    margin: 0;
 }
 
 .testimonials__quote p {
@@ -175,7 +156,7 @@ a {
     color: #1F2937;
     font-style: italic;
     font-weight: 300;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .testimonials__quote figcaption {
@@ -185,7 +166,49 @@ a {
     padding-right: 60px;
 }
 
+.call-to-action-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px 60px;
+}
+
+.call-to-action {
+    flex: 0 1 800px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 34px 120px;
+    background-color: #3882F6;
+    border-radius: 8px;
+    column-gap: 60px;
+}
+
+.call-to-action__sign-up-btn {
+    background-color: #3882F6;
+    border: 2px solid #F9FAF8;
+    padding: 8px 32px;
+    color: #F9FAF8;
+    font-weight: 600;
+    font-size: 16px;
+    border-radius: 6px;
+}
+
+.call-to-action__title {
+    font-size: 24px;
+    margin-bottom: 2px;
+    color: #F9FAF8;
+}
+
+.call-to-action__text {
+    margin-top: 0;
+    color: #E5E7EB;
+}
 
 .footer {
+    padding: 40px;
     background-color: #1F2937;
+    color: #E5E7EB;
+    text-align: center;
 }
